Put Json and Vert.x nodes in clusters in webfx-stack Graphviz

--- a/src/main/asciidoc/webfx-stack/webfx-stack.adoc
+++ b/src/main/asciidoc/webfx-stack/webfx-stack.adoc
@@ -3,15 +3,15 @@
 [graphviz, webfx-stack, format=svg]
 ----
 digraph D {
-    graph [compound=true, ranksep=0.3, nodesep=0.2, fontname=monospace, fontsize=10];
-    node [shape="rectangle", style="rounded,filled", fillcolor="#f5dd90", fontname=monospace, fontsize=10];
+    graph [compound=true, ranksep=0.3, nodesep=0.2, fontname=monospace, fontsize=10]
+    node [shape="rectangle", style="rounded,filled", fillcolor="#f5dd90", fontname=monospace, fontsize=10]
 
     subgraph cluster_C {
-        label = "Client";
+        label = "Client"
 
         subgraph cluster_NonUI {
-            label = "Non-UI";
-            style = "dashed";
+            label = "Non-UI"
+            style = "dashed"
 
             Authn
             Authz
@@ -20,11 +20,13 @@ digraph D {
             Push
             QueryPush
 
-            {rank=same Authn ORM}
-            {rank=same Authz QueryPush}
+            {rank=same Authz ORM}
+            {rank=same QueryPush Authn}
             {rank=same Push DB}
-            Authn -> Authz -> ORM [style=invis]
             Push -> DB [style=invis]
+
+            Authz -> ORM [style=invis]
+            Authn -> QueryPush [style=invis]
 
             ORM -> DB
             ORM -> QueryPush
@@ -33,25 +35,26 @@ digraph D {
         }
 
         subgraph cluster_UI {
-            label = "UI";
-            style = "dashed";
+            label = "UI"
+            style = "dashed"
 
+            Validation
             Routing
             I18n
-            Validation
             Action
 
-            {rank=same Action I18n Validation Routing}
-            Action -> Routing -> I18n [style=invis]
+            {rank=same Validation Routing I18n Action}
+            I18n -> Action [minlen=2]
+            Validation -> Routing -> I18n [style=invis]
         }
 
         subgraph cluster_P {
-            style = "dashed";
-            label = "              Platform";
+            style = "dashed"
+            label = "              Platform"
 
             WindowHistory
             WindowLocation
-            PBR [label="PBRRRRRRRRRRRRR",style=invis]
+            PBR [label="PBRRRRRRRRRRRRRRR",style=invis]
             WebAssembly
             WebWorker
 
@@ -64,38 +67,43 @@ digraph D {
     }
 
     subgraph cluster_SHR {
-        label = "Shared      ";
+        label = "Shared          "
 
-        L [label="LLLLLLLL",style=invis]
         Async
         Com
-        Json
-        R [label="RRRRRRR",style=invis]
 
-        {rank=same L Async Json Com R}
-        L -> Async -> Com -> Json -> R [style=invis]
+        subgraph cluster_SHRP {
+            label = "Platform"
+            style = "dashed"
+
+            Json
+        }
+
+        {rank=same Async Com}
+        Async -> Com [style=invis]
+        Com -> Json [style=invis, constraint=false]
     }
 
     subgraph cluster_S {
-        label = "Server";
+        label = "Server"
 
         DBS [label="DB (server)"]
         PushS [label="Push (server)"]
         QueryPushS [label="QueryPush (server)"]
-        Vertx [label="Vert.x"]
-        TR [style=invis]
-        BL [style=invis;label="LLLLLL"]
-        BR [style=invis;label="RRRRRRRRR"]
 
-        TR -> BR [style=invis]
-        {rank=same Vertx QueryPushS TR}
+        subgraph cluster_I {
+            label = "Implementation"
+            style = "dashed"
+
+            Vertx [label="Vert.x"]
+        }
+
         {rank=same DBS PushS}
         PushS -> DBS [style=invis]
-        Vertx -> BL [style=invis]
-        Vertx -> QueryPushS -> TR [style=invis]
 
         QueryPushS -> PushS
         QueryPushS -> DBS
+        QueryPushS -> Vertx [style=invis,len=2]
     }
 
     Routing -> WindowLocation
@@ -103,5 +111,7 @@ digraph D {
 
     PBR -> Com [ltail=cluster_C,style=dashed,minlen=2]
     Com -> QueryPushS [lhead=cluster_S,style=dashed,minlen=2]
+
+    Authz -> Action [constraint=false] // Double edge! Why?
 }
 ----
