--- a/src/main/asciidoc/webfx-extras/webfx-extras.adoc
+++ b/src/main/asciidoc/webfx-extras/webfx-extras.adoc
@@ -1,6 +1,6 @@
 
 [.text-center]
-[graphviz, webfx-stack, format=svg]
+[graphviz, webfx-extras, format=svg]
 ----
 digraph D {
     graph [compound=true, ranksep=0.3, nodesep=0.2, fontname=monospace, fontsize=10]
