--- a/src/main/asciidoc/webfx-stack/webfx-stack.adoc
+++ b/src/main/asciidoc/webfx-stack/webfx-stack.adoc
@@ -7,25 +7,44 @@ digraph D {
     node [shape="rectangle", style="rounded,filled", fillcolor="#f5dd90", fontname=monospace, fontsize=10]
 
     subgraph cluster_C {
-        label = "Client"
+        label = "    Client"
 
-        subgraph cluster_NonUI {
-            label = "Non-UI"
+        subgraph cluster_UI {
+            label = "    UI"
             style = "dashed"
 
+            Routing
+            I18n
+            Action
+            Validation
+            U1 [width=0.1,style=invis]
+
+            {rank=same Routing I18n Action Validation U1}
+            I18n -> Action [minlen=2]
+            Routing -> I18n -> Validation [style=invis]
+            Action -> Validation -> U1 [style=invis]
+        }
+
+        subgraph cluster_NonUI {
+            label = "Non-UI      "
+            style = "dashed"
+
+            N1 [width=0.1,style=invis]
+            N2 [width=0.1,style=invis]
             Authn
             Authz
-            DB
             ORM
+            N3 [width=0.73,style=invis]
+            DB
             Push
             QueryPush
 
-            {rank=same Authz ORM}
-            {rank=same QueryPush Authn}
+            {rank=same N1 ORM N2 Authz Authn N3}
+            {rank=same QueryPush}
             {rank=same Push DB}
             Push -> DB [style=invis]
 
-            Authz -> ORM [style=invis]
+            N1 -> N2 -> Authn -> Authz -> ORM -> N3 [style=invis]
             Authn -> QueryPush [style=invis]
 
             ORM -> DB
@@ -34,62 +53,28 @@ digraph D {
             QueryPush -> DB
         }
 
-        subgraph cluster_UI {
-            label = "UI"
-            style = "dashed"
-
-            Validation
-            Routing
-            I18n
-            Action
-
-            {rank=same Validation Routing I18n Action}
-            I18n -> Action [minlen=2]
-            Validation -> Routing -> I18n [style=invis]
-        }
-
-        subgraph cluster_P {
-            style = "dashed"
-            label = "              Platform"
-
-            WindowHistory
-            WindowLocation
-            PBR [label="PBRRRRRRRRRRRRRRR",style=invis]
-            WebAssembly
-            WebWorker
-
-            {rank=same WindowHistory WindowLocation}
-            {rank=same PBR WebAssembly WebWorker}
-            WebAssembly -> WebWorker -> PBR [style=invis]
-            WindowHistory -> WebAssembly [style=invis]
-        }
-
     }
 
     subgraph cluster_SHR {
-        label = "Shared          "
+        label = "Shared       "
 
+        R1 [width=1.12,style=invis]
         Async
         Com
+        R2 [width=1.8,style=invis]
 
-        subgraph cluster_SHRP {
-            label = "Platform"
-            style = "dashed"
-
-            Json
-        }
-
-        {rank=same Async Com}
-        Async -> Com [style=invis]
-        Com -> Json [style=invis, constraint=false]
+        {rank=same R1 Async Com R2}
+        R1 -> Async -> Com -> R2 [style=invis]
     }
 
     subgraph cluster_S {
         label = "Server"
 
-        DBS [label="DB (server)"]
-        PushS [label="Push (server)"]
+        S1 [width=1.58,style=invis]
         QueryPushS [label="QueryPush (server)"]
+        S2 [width=1.3,style=invis]
+        PushS [label="Push (server)"]
+        DBS [label="DB (server)"]
 
         subgraph cluster_I {
             label = "Implementation"
@@ -98,7 +83,9 @@ digraph D {
             Vertx [label="Vert.x"]
         }
 
+        {rank=same S1, QueryPushS, S2}
         {rank=same DBS PushS}
+        S1 -> QueryPushS -> S2 [style=invis]
         PushS -> DBS [style=invis]
 
         QueryPushS -> PushS
@@ -106,12 +93,9 @@ digraph D {
         QueryPushS -> Vertx [style=invis,len=2]
     }
 
-    Routing -> WindowLocation
-    Routing -> WindowHistory
-
-    PBR -> Com [ltail=cluster_C,style=dashed,minlen=2]
+    Push -> Com [ltail=cluster_C,style=dashed,minlen=2]
     Com -> QueryPushS [lhead=cluster_S,style=dashed,minlen=2]
 
-    Authz -> Action [constraint=false] // Double edge! Why?
+    Action -> Authz [dir=back]
 }
 ----
