--- a/src/main/asciidoc/webfx-extras/webfx-extras.adoc
+++ b/src/main/asciidoc/webfx-extras/webfx-extras.adoc
@@ -17,11 +17,11 @@ digraph D {
             VisualGrid -> VisualCharts -> VisualGantt [style=invis]
         }
 
-        {rank=same FlexBox WebText Led MaterialDesign}
-        FlexBox -> WebText -> Led -> MaterialDesign [style=invis]
+        {rank=same FilePicker FlexBox WebText Led MaterialDesign}
+        FilePicker -> FlexBox -> WebText -> Led -> MaterialDesign [style=invis]
     }
 
     VisualCharts -> Led [style=invis]
-    VisualCharts -> WebText [style=invis]
+    VisualCharts -> FlexBox [style=invis]
 }
 ----
