--- a/src/main/asciidoc/webfx-readmes/webfx-platform-light.adoc
+++ b/src/main/asciidoc/webfx-readmes/webfx-platform-light.adoc
@@ -1,6 +1,6 @@
 
 [.text-center]
-[graphviz, webfx-platform, format=svg]
+[graphviz, webfx-platform-light, format=svg]
 ----
 digraph D {
     graph [compound=true, ranksep=0.3, nodesep=0.2, fontname=monospace, fontsize=10, splines=false]
