--- a/src/main/asciidoc/webfx-readmes/webfx-platform-dark.adoc
+++ b/src/main/asciidoc/webfx-readmes/webfx-platform-dark.adoc
@@ -2,7 +2,7 @@
 [.text-center]
 [graphviz, webfx-platform-dark, format=svg]
 ----
-digraph D { bgcolor="#161B21" edge [color=white]
+digraph D { bgcolor="transparent" edge [color=white]
     graph [compound=true, ranksep=0.3, nodesep=0.2, fontname=monospace, fontsize=10, splines=false, fontcolor=white, color=white]
     node [shape="rectangle", style="rounded,filled", fillcolor="#f5dd90", fontname=monospace, fontsize=10]
 
